Add ipk locale to web + remove staging warning + fix migration

--- a/locales/native-names.json
+++ b/locales/native-names.json
@@ -59,6 +59,7 @@
   "id": "Bahasa Indonesia",
   "ie": "ie",
   "ig": "Ásụ̀sụ́ Ìgbò",
+  "ipk": "ipk",
   "is": "Íslenska",
   "it": "Italiano",
   "ja": "日本語",
